Fix warnings in backend build